--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,5 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: environement
+      run: sudo apt-get install -y libjack-jackd2-dev
     - name: make
       run: make -f Makefile_cpp
