Base waveform improvements
* A DC has been added for tests and composition.
    The raw file contains the envelope of the signal
* Base waveform can be per channels
    The parameter is no longer a character but a string.
    In case the string is too short, the last character is duplicated
    as many times as needed.
    That provides the compatibility with the previous version

--- a/cpp_version/Makefile
+++ b/cpp_version/Makefile
@@ -6,7 +6,7 @@ CXX_Version?=-std=c++11
 estim					:	main.o main_loop.o bundle_signals.o input_midi.o output_midi.o parameters.o sample_step.o sound_file_output.o amplitude_handler.o frequency_handler.o
 	$(CXX) $(CXXFLAGS) -o estim main.o main_loop.o bundle_signals.o input_midi.o output_midi.o parameters.o sample_step.o sound_file_output.o amplitude_handler.o frequency_handler.o -l jack
 
-main.o					:	main.cpp help_message.hxx sound_file_output.hxx
+main.o					:	main.cpp help_message.hxx sound_file_output.hxx main_loop.hxx
 	$(CXX) -c $(CXXFLAGS) $(DEFAULTFLAGS) $(CXX_Version) -o main.o main.cpp
 
 amplitude_handler.o		:	amplitude_handler.hxx		amplitude_handler.cpp
