Move to the C++14
C++14 is now the minimum requirement.
However, the features are going to come slowly, in order to test them on my oldest machine (using GCC 5.5.0)

--- a/cpp_version/Makefile
+++ b/cpp_version/Makefile
@@ -1,10 +1,10 @@
 CXX?=g++
 CXXFLAGS?=-O2
 DEFAULTFLAGS?=-D__OUTPUT_SINE_MODE__
-CXX_Version?=-std=c++11
+CXX_Version?=-std=c++14
 
 estim					:	main.o main_loop.o bundle_signals.o input_midi.o output_midi.o parameters.o sample_step.o sound_file_output.o amplitude_handler.o frequency_handler.o
-	$(CXX) $(CXXFLAGS) -o estim main.o main_loop.o bundle_signals.o input_midi.o output_midi.o parameters.o sample_step.o sound_file_output.o amplitude_handler.o frequency_handler.o -l jack
+	$(CXX) $(CXXFLAGS) -o multisignalgene main.o main_loop.o bundle_signals.o input_midi.o output_midi.o parameters.o sample_step.o sound_file_output.o amplitude_handler.o frequency_handler.o -l jack
 
 main.o					:	main.cpp help_message.hxx sound_file_output.hxx main_loop.hxx
 	$(CXX) -c $(CXXFLAGS) $(DEFAULTFLAGS) $(CXX_Version) -o main.o main.cpp
@@ -40,5 +40,5 @@ output_midi.o			:	output_midi.hxx output_midi.cpp parameters.hxx amplitude_handl
 	$(CXX) -c $(CXXFLAGS) $(CXX_Version) -o output_midi.o output_midi.cpp
 
 clean			:
-	rm -f *.o estim
+	rm -f *.o multisignalgene
 
