New primitives (software version), new modulation, doc improvement
* Add the phase set (not shift)
* Add a modulation using the absolute value rather than the (half of) the sine
  Note: it doubles the frequency
* Refactor the modulation code
* Improve the documentation
  More graphs, more comments

--- a/Documentation/Makefile
+++ b/Documentation/Makefile
@@ -4,6 +4,10 @@ DOTFLAGS?=
 
 doc			:
 	$(DOT) $(DOTFLAGS) -T$(DOTLANG) Wave_gene.gv -o Wave_gene.$(DOTLANG) 
+	$(DOT) $(DOTFLAGS) -T$(DOTLANG) Modulation.gv -o Modulation.$(DOTLANG) 
+	$(DOT) $(DOTFLAGS) -T$(DOTLANG) Channels.gv -o Channels.$(DOTLANG) 
 
 clean		:
 	rm -f Wave_gene.$(DOTLANG)
+	rm -f Modulation.$(DOTLANG)
+	rm -f Channels.$(DOTLANG)
