--- a/Documentation/Makefile
+++ b/Documentation/Makefile
@@ -1,13 +1,15 @@
 DOT?=dot
 DOTLANG?=pdf
 DOTFLAGS?=
+SRCDIR?=
+BUILDDIR?=
 
 doc			:
-	$(DOT) $(DOTFLAGS) -T$(DOTLANG) Wave_gene.gv -o Wave_gene.$(DOTLANG) 
-	$(DOT) $(DOTFLAGS) -T$(DOTLANG) Modulation.gv -o Modulation.$(DOTLANG) 
-	$(DOT) $(DOTFLAGS) -T$(DOTLANG) Channels.gv -o Channels.$(DOTLANG) 
+	$(DOT) $(DOTFLAGS) -T$(DOTLANG) $(SRCDIR)Wave_gene.gv -o $(BUILDDIR)Wave_gene.$(DOTLANG) 
+	$(DOT) $(DOTFLAGS) -T$(DOTLANG) $(SRCDIR)Modulation.gv -o $(BUILDDIR)Modulation.$(DOTLANG) 
+	$(DOT) $(DOTFLAGS) -T$(DOTLANG) $(SRCDIR)Channels.gv -o $(BUILDDIR)Channels.$(DOTLANG) 
 
 clean		:
-	rm -f Wave_gene.$(DOTLANG)
-	rm -f Modulation.$(DOTLANG)
-	rm -f Channels.$(DOTLANG)
+	rm -f $(BUILDDIR)Wave_gene.$(DOTLANG)
+	rm -f $(BUILDDIR)Modulation.$(DOTLANG)
+	rm -f $(BUILDDIR)Channels.$(DOTLANG)
