--- a/.github/workflows/graphviz.yml
+++ b/.github/workflows/graphviz.yml
@@ -12,8 +12,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: environement
       run: sudo apt-get install -y graphviz
-    - name: make
-      run: make -f Makefile_doc
+    - name: setup folders
+      run: |
+        mkdir build
+        mkdir build/pdf
+        mkdir build/jpeg
+        mkdir build/png
+    - name: building
+      run: |
+        cd Documentation
+        make DOTLANG=pdf BUILDDIR=../build/pdf/
+        make DOTLANG=jpeg BUILDDIR=../build/jpeg/
+        make DOTLANG=png BUILDDIR=../build/png/
+    - name: return workflow as artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: multisignalgene-doc
+        path: build/*
