Bug fix: failed when the number of channels is 0. Other minor fixes

--- a/cpp_version/Makefile
+++ b/cpp_version/Makefile
@@ -10,7 +10,7 @@ $(BUILDDIR)multisignalgene_DW_$(DEFAULTWAVE)			:	$(BUILDDIR)main.o $(BUILDDIR)ma
 	$(CXX) $(CXXFLAGS) -o $(BUILDDIR)multisignalgene_DW_$(DEFAULTWAVE) $(BUILDDIR)main.o $(BUILDDIR)main_loop_DW_$(DEFAULTWAVE).o $(BUILDDIR)bundle_signals.o $(BUILDDIR)params_input_midi.o $(BUILDDIR)params_input_mnemos.o $(BUILDDIR)params_output_txt.o $(BUILDDIR)params_output_mnemos.o $(BUILDDIR)parameters.o $(BUILDDIR)params_io_handler.o $(BUILDDIR)sample_step.o $(BUILDDIR)sound_file_output.o $(BUILDDIR)amplitude_handler.o $(BUILDDIR)frequency_handler.o $(BUILDDIR)modulation_handler.o -l jack
 
 $(BUILDDIR)main.o					:	$(SRCDIR)main.cpp $(SRCDIR)help_message.hxx $(SRCDIR)sound_file_output.hxx $(SRCDIR)main_loop.hxx $(SRCDIR)params_io_handler.hxx
-	$(CXX) -c $(CXXFLAGS) $(CXX_Version) -o $(BUILDDIR)main.o $(SRCDIR)main.cpp
+	$(CXX) -c $(CXXFLAGS) $(CXX_Version) -D __OUTPUT_$(DEFAULTWAVE)_MODE__ -o $(BUILDDIR)main.o $(SRCDIR)main.cpp
 
 $(BUILDDIR)amplitude_handler.o		:	$(SRCDIR)amplitude_handler.hxx $(SRCDIR)amplitude_handler.cpp
 	$(CXX) -c $(CXXFLAGS) $(CXX_Version) -o $(BUILDDIR)amplitude_handler.o $(SRCDIR)amplitude_handler.cpp
