--- a/Documentation/Makefile
+++ b/Documentation/Makefile
@@ -5,6 +5,7 @@ SRCDIR?=
 BUILDDIR?=
 
 doc			:
+	$(DOT) $(DOTFLAGS) -T$(DOTLANG) $(SRCDIR)Overview.gv -o $(BUILDDIR)Overview.$(DOTLANG) 
 	$(DOT) $(DOTFLAGS) -T$(DOTLANG) $(SRCDIR)Wave_gene.gv -o $(BUILDDIR)Wave_gene.$(DOTLANG) 
 	$(DOT) $(DOTFLAGS) -T$(DOTLANG) $(SRCDIR)Modulation.gv -o $(BUILDDIR)Modulation.$(DOTLANG) 
 	$(DOT) $(DOTFLAGS) -T$(DOTLANG) $(SRCDIR)Channels.gv -o $(BUILDDIR)Channels.$(DOTLANG) 
