--- a/Makefile_cpp
+++ b/Makefile_cpp
@@ -2,7 +2,7 @@
 # in the meantime workflows are available inside the subfolders
 # To get more options, use the Makefile inside the cpp_version folder
 
-estim:
+multisignalgene:
 	cd cpp_version && $(MAKE) multisignalgene
 
 clean:
